syntax = "proto3";

package XFramework;

option go_package = "serverproto/frame";

//**********命名规范*************//
//Client->server Req*
//Server->client Rsp*
//Server->

message ReqSyncFrame {
  SyncFrame Frame = 1;
}

message SyncFrame {
  int64 PlayerID = 1;
  int64 Frame = 2;
  PlayerInput Input = 3;
}

message PlayerInput {
  float X = 1;
  float Y = 2;
  bool IsJump = 3;
  repeated int32 SkillInput = 4;
}


message RspSyncFrame {
  map<int32,SyncFrame> serverFrame = 1;
}

message ReqReadyBattle {
  int64 PlayerID = 1;
}

message RspReadyBattle {
  int64 PlayerID = 1;
}

message RspNotifyGameStart {
}


enum GameState{
  GameState_None = 0;
  GameState_Start = 1;
}

enum FrameSyncType {
  FrameSyncType_None = 0;
  FrameSyncType_Local = 1;
  FrameSyncType_Server = 2;
}
